--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
     padding: 0;
 }
 html {
+    font-family: 'Poppins', sans-serif;
     font-size: 10px;
 }
 body {
@@ -58,6 +59,7 @@ form label {
 }
 form input {
     font-size: 3.2rem;
+    font-weight: 700;
     padding: .5rem;
     text-align: center;
     /* width: 4rem; */
@@ -108,6 +110,7 @@ hr {
 }
 
 .output-container span {
+    font-weight: 800;
     color: var(--purple);
 }
 
